@@ -1,3 +1,8 @@
+2012-08-13  Frank Warmerdam  <warmerdam@google.com>
+
+	* libtiff/tif_write.c: Fix bug rewriting image tiles in a 
+	compressed file: http://trac.osgeo.org/gdal/ticket/4771
+
 2012-08-02  Frank Warmerdam  <warmerdam@google.com>
 
 	* libtiff/tif_dirread.c: report error in case of mismatch value 
